<resources>
    <string name="app_name">TravelFriends</string>
    <!-- Strings related to login -->
    <string name="prompt_email">输入用户名</string>
    <string name="prompt_password">输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">注册</string>
    <string name="action_forget_password_short">忘记密码</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">用户名无效</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">登录失败</string>
</resources>
