<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <FrameLayout
        android:id="@+id/framlayout"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:background="@color/mainThemeColor"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/login_back_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/public_back"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintLeft_toLeftOf="parentparent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="登 录"
            android:textColor="@color/textWhiteMainColor"
            android:textSize="25sp" />


    </FrameLayout>

    <EditText
        android:id="@+id/register_username"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/framlayout" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username" />

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/login_btn_background"
        android:enabled="false"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textColor="@color/textWhiteMainColor"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/login_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:outlineSpotShadowColor="@color/mainThemeColor"
            android:visibility="visible"
            tools:layout_editor_absoluteX="178dp"
            tools:layout_editor_absoluteY="452dp"
            tools:ignore="MissingConstraints" />


    </RelativeLayout>

    <TextView
        android:id="@+id/register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/action_register_short"
        android:textColor="@color/textMainColor"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/login_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_layout" />

    <TextView
        android:id="@+id/need_help_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="需要帮助"
        android:textColor="@color/textMainColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/login_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>